<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e9ecef"
    android:orientation="vertical"
    android:padding="@dimen/baslik1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/baslik"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            app:srcCompat="@drawable/ic_star_false" />



        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8"
            android:text="@string/car1_name"
            android:textAlignment="textEnd"
            android:textColor="#7D4CAE"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:adjustViewBounds="true"
        android:padding="@dimen/paddi"
        app:srcCompat="@drawable/img_1_cls" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddi"
        android:text="@string/car1_aciklama"
        android:textColor="#7D4CAE" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car1_ozet"
        android:textAlignment="center"
        android:textColor="#595959"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car1_fiyat"
        android:textAlignment="textEnd"
        android:textColor="#595959"
        android:textSize="@dimen/fiyatsize"
        android:textStyle="bold|italic" />

</LinearLayout>